# hostname={{ ansible_facts['hostname'] }}

--- a/roles/server-info/templates/info.j2
+++ b/roles/server-info/templates/info.j2
@@ -1,7 +1,7 @@
 Server Information Summary
 --------------------------
 
-hostname={{ ansible_facts['hostname'] }}
+# hostname={{ ansible_facts['hostname'] }}
 fqdn={{ ansible_facts['fqdn'] }}
 ipaddr={{ ansible_facts['default_ipv4']['address'] }}
 distro={{ ansible_facts['distribution'] }}
