fqdn={{ ansible_facts['fqdn'] }}

--- a/roles/server-info/templates/info.j2
+++ b/roles/server-info/templates/info.j2
@@ -1,7 +1,6 @@
 Server Information Summary
 --------------------------
 
-# hostname={{ ansible_facts['hostname'] }}
 fqdn={{ ansible_facts['fqdn'] }}
 ipaddr={{ ansible_facts['default_ipv4']['address'] }}
 distro={{ ansible_facts['distribution'] }}
@@ -9,3 +8,4 @@ distro_version={{ ansible_facts['distribution_version'] }}
 nameservers={{ ansible_facts['dns']['nameservers'] }}
 totalmem={{ ansible_facts['memtotal_mb'] }}
 freemem={{ ansible_facts['memfree_mb'] }}
+hostname={{ ansible_facts['hostname'] }}
